[package]
name = "rs_snake"
version = "1.0.1"
edition = "2021"
description = "The classic 'Snake' game as a terminal application."
license = "Unlicense"
repository = "https://github.com/FriedlandAaron/rs_snake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
termion = "3.0.0"
