[package]
name = "rs_snake"
version = "1.0.2"
edition = "2021"
description = "The classic 'Snake' game as a terminal application."
license = "Unlicense"
repository = "https://github.com/FriedlandAaron/rs_snake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
termion = "3.0.0"
